crates/tachy/src/app/snapshots/tachy__app__tests__info_toast_80x24.snap
---
source: crates/tachy/src/app/tests.rs
expression: terminal.backend()
---
" tachy                                                                   NORMAL "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                      no file open — ctrl-o to open a file                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" exported 1,234 rows to /home/someone/a/very/long/path/that/does/not/fit/on/on… "
" no file open                                                                   "
" / search  f filter  s sort  i inspect  : command  J jobs  q quit        ? help "
