crates/tachy/src/app/snapshots/tachy__app__tests__main_screen_ansi256_120x40.snap
---
source: crates/tachy/src/app/tests.rs
expression: style_dump(&terminal)
---
 0: 0-6 Indexed(215)/Indexed(234)/BOLD | 7-15 Indexed(253)/Indexed(233)/UNDERLINED | 16-95 Indexed(253)/Indexed(234)/NONE | 96-111 Indexed(246)/Indexed(234)/NONE | 112-119 Indexed(233)/Indexed(74)/BOLD
 1: 0-3 Indexed(253)/Indexed(234)/NONE | 4-4 Indexed(236)/Indexed(234)/NONE | 5-5 Indexed(253)/Indexed(234)/NONE | 6-10 Indexed(215)/Indexed(234)/BOLD | 11-11 Indexed(253)/Indexed(234)/NONE | 12-12 Indexed(238)/Indexed(234)/NONE | 13-13 Indexed(253)/Indexed(234)/NONE | 14-18 Indexed(253)/Indexed(234)/BOLD | 19-19 Indexed(253)/Indexed(234)/NONE | 20-24 Indexed(253)/Indexed(234)/BOLD | 25-25 Indexed(253)/Indexed(234)/NONE | 26-30 Indexed(253)/Indexed(234)/BOLD | 31-31 Indexed(253)/Indexed(234)/NONE | 32-36 Indexed(253)/Indexed(234)/BOLD | 37-37 Indexed(253)/Indexed(234)/NONE | 38-42 Indexed(253)/Indexed(234)/BOLD | 43-43 Indexed(253)/Indexed(234)/NONE | 44-48 Indexed(253)/Indexed(234)/BOLD | 49-49 Indexed(253)/Indexed(234)/NONE | 50-54 Indexed(253)/Indexed(234)/BOLD | 55-55 Indexed(253)/Indexed(234)/NONE | 56-60 Indexed(253)/Indexed(234)/BOLD | 61-61 Indexed(253)/Indexed(234)/NONE | 62-66 Indexed(253)/Indexed(234)/BOLD | 67-67 Indexed(253)/Indexed(234)/NONE | 68-73 Indexed(253)/Indexed(234)/BOLD | 74-74 Indexed(253)/Indexed(234)/NONE | 75-78 Indexed(253)/Indexed(234)/BOLD | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-86 Indexed(246)/Indexed(234)/NONE | 87-119 Indexed(253)/Indexed(234)/NONE
 2: 0-3 Indexed(253)/Indexed(234)/NONE | 4-4 Indexed(236)/Indexed(234)/NONE | 5-5 Indexed(253)/Indexed(234)/NONE | 6-10 Indexed(246)/Indexed(234)/NONE | 11-11 Indexed(253)/Indexed(234)/NONE | 12-12 Indexed(238)/Indexed(234)/NONE | 13-13 Indexed(253)/Indexed(234)/NONE | 14-18 Indexed(246)/Indexed(234)/NONE | 19-19 Indexed(253)/Indexed(234)/NONE | 20-24 Indexed(246)/Indexed(234)/NONE | 25-25 Indexed(253)/Indexed(234)/NONE | 26-30 Indexed(246)/Indexed(234)/NONE | 31-31 Indexed(253)/Indexed(234)/NONE | 32-36 Indexed(246)/Indexed(234)/NONE | 37-37 Indexed(253)/Indexed(234)/NONE | 38-42 Indexed(246)/Indexed(234)/NONE | 43-43 Indexed(253)/Indexed(234)/NONE | 44-48 Indexed(246)/Indexed(234)/NONE | 49-49 Indexed(253)/Indexed(234)/NONE | 50-54 Indexed(246)/Indexed(234)/NONE | 55-55 Indexed(253)/Indexed(234)/NONE | 56-60 Indexed(246)/Indexed(234)/NONE | 61-61 Indexed(253)/Indexed(234)/NONE | 62-66 Indexed(246)/Indexed(234)/NONE | 67-67 Indexed(253)/Indexed(234)/NONE | 68-73 Indexed(246)/Indexed(234)/NONE | 74-74 Indexed(253)/Indexed(234)/NONE | 75-78 Indexed(246)/Indexed(234)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-82 Indexed(253)/Indexed(234)/BOLD | 83-99 Indexed(246)/Indexed(234)/NONE | 100-119 Indexed(253)/Indexed(234)/NONE
 3: 0-2 Indexed(215)/Indexed(235)/NONE | 3-3 Indexed(253)/Indexed(235)/NONE | 4-4 Indexed(236)/Indexed(235)/NONE | 5-5 Indexed(253)/Indexed(235)/NONE | 6-10 Indexed(233)/Indexed(215)/BOLD | 11-11 Indexed(253)/Indexed(235)/NONE | 12-12 Indexed(238)/Indexed(235)/NONE | 13-78 Indexed(253)/Indexed(235)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-89 Indexed(246)/Indexed(234)/NONE | 90-119 Indexed(253)/Indexed(234)/NONE
 4: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
 5: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-90 Indexed(246)/Indexed(234)/NONE | 91-119 Indexed(253)/Indexed(234)/NONE
 6: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-89 Indexed(246)/Indexed(234)/NONE | 90-119 Indexed(253)/Indexed(234)/NONE
 7: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
 8: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-86 Indexed(246)/Indexed(234)/NONE | 87-119 Indexed(253)/Indexed(234)/NONE
 9: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-92 Indexed(246)/Indexed(234)/NONE | 93-94 Indexed(253)/Indexed(234)/NONE | 95-98 Indexed(249)/Indexed(234)/NONE | 99-119 Indexed(253)/Indexed(234)/NONE
10: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-92 Indexed(246)/Indexed(234)/NONE | 93-94 Indexed(253)/Indexed(234)/NONE | 95-98 Indexed(249)/Indexed(234)/NONE | 99-119 Indexed(253)/Indexed(234)/NONE
11: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-92 Indexed(246)/Indexed(234)/NONE | 93-94 Indexed(253)/Indexed(234)/NONE | 95-98 Indexed(249)/Indexed(234)/NONE | 99-119 Indexed(253)/Indexed(234)/NONE
12: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-92 Indexed(246)/Indexed(234)/NONE | 93-94 Indexed(253)/Indexed(234)/NONE | 95-98 Indexed(249)/Indexed(234)/NONE | 99-119 Indexed(253)/Indexed(234)/NONE
13: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-92 Indexed(246)/Indexed(234)/NONE | 93-94 Indexed(253)/Indexed(234)/NONE | 95-98 Indexed(249)/Indexed(234)/NONE | 99-119 Indexed(253)/Indexed(234)/NONE
14: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-92 Indexed(246)/Indexed(234)/NONE | 93-94 Indexed(253)/Indexed(234)/NONE | 95-98 Indexed(249)/Indexed(234)/NONE | 99-119 Indexed(253)/Indexed(234)/NONE
15: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-92 Indexed(246)/Indexed(234)/NONE | 93-94 Indexed(253)/Indexed(234)/NONE | 95-98 Indexed(249)/Indexed(234)/NONE | 99-119 Indexed(253)/Indexed(234)/NONE
16: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-92 Indexed(246)/Indexed(234)/NONE | 93-94 Indexed(253)/Indexed(234)/NONE | 95-98 Indexed(249)/Indexed(234)/NONE | 99-119 Indexed(253)/Indexed(234)/NONE
17: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-92 Indexed(246)/Indexed(234)/NONE | 93-94 Indexed(253)/Indexed(234)/NONE | 95-98 Indexed(249)/Indexed(234)/NONE | 99-119 Indexed(253)/Indexed(234)/NONE
18: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-92 Indexed(246)/Indexed(234)/NONE | 93-94 Indexed(253)/Indexed(234)/NONE | 95-98 Indexed(249)/Indexed(234)/NONE | 99-119 Indexed(253)/Indexed(234)/NONE
19: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-92 Indexed(246)/Indexed(234)/NONE | 93-94 Indexed(253)/Indexed(234)/NONE | 95-99 Indexed(249)/Indexed(234)/NONE | 100-119 Indexed(253)/Indexed(234)/NONE
20: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-80 Indexed(253)/Indexed(234)/NONE | 81-92 Indexed(246)/Indexed(234)/NONE | 93-94 Indexed(253)/Indexed(234)/NONE | 95-99 Indexed(249)/Indexed(234)/NONE | 100-119 Indexed(253)/Indexed(234)/NONE
21: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
22: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
23: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
24: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
25: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
26: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
27: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
28: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
29: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
30: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
31: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
32: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
33: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
34: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
35: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
36: 0-2 Indexed(246)/Indexed(233)/NONE | 3-3 Indexed(253)/Indexed(233)/NONE | 4-4 Indexed(236)/Indexed(233)/NONE | 5-11 Indexed(253)/Indexed(233)/NONE | 12-12 Indexed(238)/Indexed(233)/NONE | 13-78 Indexed(253)/Indexed(233)/NONE | 79-79 Indexed(236)/Indexed(233)/NONE | 80-119 Indexed(253)/Indexed(234)/NONE
37: 0-119 Indexed(209)/Indexed(233)/NONE
38: 0-0 Indexed(253)/Indexed(235)/NONE | 1-5 Indexed(74)/Indexed(235)/BOLD | 6-8 Indexed(246)/Indexed(235)/NONE | 9-14 Indexed(253)/Indexed(235)/NONE | 15-17 Indexed(246)/Indexed(235)/NONE | 18-24 Indexed(253)/Indexed(235)/NONE | 25-82 Indexed(246)/Indexed(235)/NONE | 83-116 Indexed(253)/Indexed(235)/NONE | 117-118 Indexed(246)/Indexed(235)/NONE | 119-119 Indexed(253)/Indexed(235)/NONE
39: 0-0 Indexed(253)/Indexed(233)/NONE | 1-1 Indexed(215)/Indexed(233)/BOLD | 2-8 Indexed(246)/Indexed(233)/NONE | 9-10 Indexed(253)/Indexed(233)/NONE | 11-11 Indexed(215)/Indexed(233)/BOLD | 12-18 Indexed(246)/Indexed(233)/NONE | 19-20 Indexed(253)/Indexed(233)/NONE | 21-21 Indexed(215)/Indexed(233)/BOLD | 22-26 Indexed(246)/Indexed(233)/NONE | 27-28 Indexed(253)/Indexed(233)/NONE | 29-29 Indexed(215)/Indexed(233)/BOLD | 30-37 Indexed(246)/Indexed(233)/NONE | 38-39 Indexed(253)/Indexed(233)/NONE | 40-40 Indexed(215)/Indexed(233)/BOLD | 41-48 Indexed(246)/Indexed(233)/NONE | 49-50 Indexed(253)/Indexed(233)/NONE | 51-51 Indexed(215)/Indexed(233)/BOLD | 52-56 Indexed(246)/Indexed(233)/NONE | 57-58 Indexed(253)/Indexed(233)/NONE | 59-59 Indexed(215)/Indexed(233)/BOLD | 60-64 Indexed(246)/Indexed(233)/NONE | 65-112 Indexed(253)/Indexed(233)/NONE | 113-113 Indexed(215)/Indexed(233)/BOLD | 114-118 Indexed(246)/Indexed(233)/NONE | 119-119 Indexed(253)/Indexed(233)/NONE
