crates/tachy/src/app/snapshots/tachy__app__tests__no_tab_layout_80x24.snap
---
source: crates/tachy/src/app/tests.rs
expression: "draw(&mut app, 80, 24).backend()"
---
" tachy                                                                   NORMAL "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                      no file open — ctrl-o to open a file                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" no file open                                                                   "
" / search  f filter  s sort  i inspect  : command  J jobs  q quit        ? help "
